# llm_practice

./: .gitignore  README.md  pyproject.toml  reward_functions.py  run_grpo.py  run_grpo.sh  upload_checkpoints.sh
assets/: qwen3_instruct_trl_no_think.jinja
configs/: accelerate_config.yaml
ifeval_verifier/: __init__.py  instructions.py  instructions_registry.py
