[project]
name = "llm_practice"
version = "0.1.0"
description = "GRPO-RLVR training for Qwen3-1.7B with Math + IFEval rewards"
requires-python = ">=3.10"
dependencies = [
    # Training
    "torch>=2.4.0",
    "transformers>=4.47.0",
    "trl>=0.15.0",
    "accelerate>=1.2.0",
    "datasets>=3.0.0",
    "vllm>=0.7.0",
    # Reward verification
    "nltk>=3.9",
    "immutabledict>=4.1.0",
    "langdetect>=1.0.9",
    # Logging & Upload
    "wandb>=0.19.0",
    "huggingface-hub>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ifeval_verifier"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
